picture added to post

--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -14,7 +14,7 @@ wichtigen Preiskorrektur.
 Daraufhin hatte ich gestern Abend mal eine intensivere Kursanalyse gestartet. 
 
 Das Ergebnis könnt ihr hier nachschauen:
-https://www.tradingview.com/chart/BTCUSDT/qhMLRZcH-BTC-USD-correction-prognose/
+[[!Kursprognose](2018-01-09-btc-prognose-18-01-08.JPG)](https://www.tradingview.com/chart/BTCUSDT/qhMLRZcH-BTC-USD-correction-prognose/)
 
 Demzufolge ist meine Prognose für die nächste Woche ein Preisverfall bis auf 
 9100-8500 $. **Das widerspiegelt natürlich nur meine persönliche Meinung - 
