header picture added to post

--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Bitcoin-Kurskorrektur zum Jahresbeginn"
 date:   btc-prognose-18-01-08 10:20:00
 excerpt: "Prognose für Bitcoin-Kurskorrektur im Januar 2018."
-feature: 
+feature: https://heise.cloudimg.io/width/700/q75.png-lossy-75.webp-lossy-75.foil1/_www-heise-de_/imgs/18/2/3/4/8/4/3/8/urn-newsml-dpa-com-20090101-140306-99-06794_large_4_3-eb5743eb1bf60c32.jpeg
 tags: [bitcoin, kryptowährungen, posts]
 comments: true
 ---
