--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -1,40 +1,51 @@
 ---
 layout: post
 title:  "Bitcoin-Kurskorrektur zum Jahresbeginn"
-date:   btc-prognose-18-01-08 10:20:00
+date:   18-01-08 10:20:00
 excerpt: "Prognose für Bitcoin-Kurskorrektur im Januar 2018."
-feature: https://heise.cloudimg.io/width/700/q75.png-lossy-75.webp-lossy-75.foil1/_www-heise-de_/imgs/18/2/3/4/8/4/3/8/urn-newsml-dpa-com-20090101-140306-99-06794_large_4_3-eb5743eb1bf60c32.jpeg
+feature: http://digitalage.com.tr/wp-content/uploads/2017/09/Avrupa-Merkez-Bankasi-Bitcoin.jpg
 tags: [bitcoin, kryptowährungen, posts]
 comments: true
+lang: de
+ref: btc-prognose-18-01-08
 ---
 
 Gestern hat uns der Bitcoin mit seinem Fall von ca. 16500 $ auf kurzzeitig 
 13400 $ (mehr als 3000 Dollar!) gezeigt, dass es noch nicht vorbei ist mit der 
 wichtigen Preiskorrektur.
-Daraufhin hatte ich gestern Abend mal eine intensivere Kursanalyse gestartet. 
 
-Das Ergebnis könnt ihr hier nachschauen:
-[[!Kursprognose](2018-01-09-btc-prognose-18-01-08.JPG)](https://www.tradingview.com/chart/BTCUSDT/qhMLRZcH-BTC-USD-correction-prognose/)
+Daraufhin hatte ich gestern Abend mal eine intensivere Kursanalyse gestartet. 
+Das Ergebnis könnt ihr hier sehen:
+
+[![Kursprognose auf tradingview](/assets/img/2018-01-09-btc-prognose-18-01-08.JPG)](https://www.tradingview.com/chart/BTCUSDT/qhMLRZcH-BTC-USD-correction-prognose/)
+
 
 Demzufolge ist meine Prognose für die nächste Woche ein Preisverfall bis auf 
 9100-8500 $. **Das widerspiegelt natürlich nur meine persönliche Meinung - 
 ihr müsst Euch ein eigenes Bild machen**!
 
-Wie komme ich zu dem Ergebnis?
+#### Wie komme ich zu dem Ergebnis?
 
-Nun, das Fibonnacci-Retracement zeigt, dass die erste Spitze nach dem tiefen 
+##### Head-And-Shoulders
+
+Nun, das Fibonacci-Retracement zeigt, dass die erste Spitze nach dem tiefen 
 Fall von 20000 $ genau beim wichtigen 0.618-Level endete und somit eher nicht 
 für die Ausprägung der rechten Schulter des [Head-And-Shoulders-Pattern](https://en.wikipedia.org/wiki/Head_and_shoulders_(chart_pattern)) ausreichte. Sie war also meines Erachtens 
 nur ein Zwischenschritt.
+
 In den letzten Tagen formt sich nun anscheinend mit einer neuen Spitze bei 
 17400$ und dem anschließenden ersten Absinken diese rechte Schulter. 
+
+##### Elliot waves
+
 Nun kommt Theorie 2 ins Spiel - die 
 [Elliot-Wellen-Theorie](https://de.wikipedia.org/wiki/Elliott-Wellen). Gegen
-Mitte Dezember hatten wir den Abschluss eines bullischen 5-Wellen-Zyklus 
-(12345-Zyklus). Dem sollte nun eine längere 3-Wellen-Korrektur folgen (ABC-Zyklus).
-Wie in der Zeichnung ersichtlich, sollten wir uns nun in der Abwärtsbewegung der 3. 
-Welle befinden, die von einer kleineren Seitwärtsbewegung oberhalb von 13500 $ 
-unterbrochen wird.
+Mitte Dezember hatten wir den Abschluss eines bullischen 5-Wellen-Impuls-Zyklus 
+(12345-Zyklus). Dem sollte nun eine längere 3-Wellen-Korrektur folgen (ABC-Zyklus 
+bzw. Zigzag). Wie in der Zeichnung ersichtlich, sollten wir uns nun in der 
+Abwärtsbewegung der 3. Welle befinden, die von einer kleineren Seitwärtsbewegung 
+oberhalb von 13500 $ unterbrochen wird.
+
 Den Tiefpunkt habe ich ermittelt, indem ich den Kursabfall von der höchsten Spitze
 auf die rechte Schulter projiziert habe. Dies ergibt in der linearen Skala einen 
 Tiefpunkt um 8500 $, in der logarithmischen Skala um 9100 $. Für die Berechnung
