--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -48,10 +48,17 @@ oberhalb von 13500 $ unterbrochen wird.
 
 Den Tiefpunkt habe ich ermittelt, indem ich den Kursabfall von der höchsten Spitze
 auf die rechte Schulter projiziert habe. Dies ergibt in der linearen Skala einen 
-Tiefpunkt um 8500 $, in der logarithmischen Skala um 9100 $. Für die Berechnung
+Tiefpunkt um 8500 $, in der logarithmischen Skala um 9100 $. 
+
+Wir werden sehen, was die nächsten Tage so bringen! Wie es mit dem Kurs weitergeht,
+ob sich das eingezeichnete Zigzag eventuell in einen 5-Wellen-Abwärtsimpuls-Zyklus
+erweitert, ist derzeit nicht voraussagbar.
+
+### Hinweis
+
+Für die Berechnung
 und Darstellung habe ich die Kurswerte der Kryptobörse Bittrex herangezogen. Auf
 anderen Börsen können die Kurse differieren. 
 
-Wir werden sehen, was die nächsten Tage so bringen! 
 
 
