--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -46,6 +46,8 @@ bzw. Zigzag). Wie in der Zeichnung ersichtlich, sollten wir uns nun in der
 Abwärtsbewegung der 3. Welle befinden, die von einer kleineren Seitwärtsbewegung 
 oberhalb von 13500 $ unterbrochen wird.
 
+![Elliot waves](/assets/img/Elliott_12345_ABC.png)
+
 Den Tiefpunkt habe ich ermittelt, indem ich den Kursabfall von der höchsten Spitze
 auf die rechte Schulter projiziert habe. Dies ergibt in der linearen Skala einen 
 Tiefpunkt um 8500 $, in der logarithmischen Skala um 9100 $. Für die Berechnung
