--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -10,7 +10,7 @@ lang: de
 ref: btc-prognose-18-01-08
 ---
 
-Gestern hat uns der Bitcoin mit seinem Fall von ca. 16500 $ auf kurzzeitig 
+Gestern (7.1.18) hat uns der Bitcoin mit seinem Fall von ca. 16500 $ auf kurzzeitig 
 13400 $ (mehr als 3000 Dollar!) gezeigt, dass es noch nicht vorbei ist mit der 
 wichtigen Preiskorrektur.
 
@@ -30,8 +30,8 @@ ihr müsst Euch ein eigenes Bild machen**!
 
 Nun, das Fibonacci-Retracement zeigt, dass die erste Spitze nach dem tiefen 
 Fall von 20000 $ genau beim wichtigen 0.618-Level endete und somit eher nicht 
-für die Ausprägung der rechten Schulter des [Head-And-Shoulders-Pattern](https://en.wikipedia.org/wiki/Head_and_shoulders_(chart_pattern)) ausreichte. Sie war also meines Erachtens 
-nur ein Zwischenschritt.
+für die Ausprägung der rechten Schulter des [Head-And-Shoulders-Pattern](https://en.wikipedia.org/wiki/Head_and_shoulders_(chart_pattern)) 
+ausreichte. Sie war also meines Erachtens nur ein Zwischenschritt.
 
 In den letzten Tagen formt sich nun anscheinend mit einer neuen Spitze bei 
 17400$ und dem anschließenden ersten Absinken diese rechte Schulter. 
@@ -50,7 +50,9 @@ oberhalb von 13500 $ unterbrochen wird.
 
 Den Tiefpunkt habe ich ermittelt, indem ich den Kursabfall von der höchsten Spitze
 auf die rechte Schulter projiziert habe. Dies ergibt in der linearen Skala einen 
-Tiefpunkt um 8500 $, in der logarithmischen Skala um 9100 $. 
+Tiefpunkt um 8500 $, in der logarithmischen Skala um 9100 $. Ich gebe allerdings
+zu, dass diese Projektion nicht der klassischen Vorgehensweise entspricht. Bei einer
+längerfristigen echten Korrektur kann dieser Wert noch deutlich darunter liegen.
 
 Wir werden sehen, was die nächsten Tage so bringen! Wie es mit dem Kurs weitergeht,
 ob sich das eingezeichnete Zigzag eventuell in einen 5-Wellen-Abwärtsimpuls-Zyklus
