--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -52,7 +52,8 @@ Den Tiefpunkt habe ich ermittelt, indem ich den Kursabfall von der höchsten Spi
 auf die rechte Schulter projiziert habe. Dies ergibt in der linearen Skala einen 
 Tiefpunkt um 8500 $, in der logarithmischen Skala um 9100 $. Ich gebe allerdings
 zu, dass diese Projektion nicht der klassischen Vorgehensweise entspricht. Bei einer
-längerfristigen echten Korrektur kann dieser Wert noch deutlich darunter liegen.
+längerfristigen echten Korrektur (nicht nur eine Verzögerung) kann dieser Wert noch
+deutlich darunter liegen.
 
 Wir werden sehen, was die nächsten Tage so bringen! Wie es mit dem Kurs weitergeht,
 ob sich das eingezeichnete Zigzag eventuell in einen 5-Wellen-Abwärtsimpuls-Zyklus
