--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -4,7 +4,7 @@ title:  "Bitcoin-Kurskorrektur zum Jahresbeginn"
 date:   18-01-08 10:20:00
 excerpt: "Prognose für Bitcoin-Kurskorrektur im Januar 2018."
 feature: http://digitalage.com.tr/wp-content/uploads/2017/09/Avrupa-Merkez-Bankasi-Bitcoin.jpg
-tags: [bitcoin, kryptowährungen, posts]
+tags: [bitcoin, kryptowährungen, posts, fibonacci, elliott, muster]
 comments: true
 lang: de
 ref: btc-prognose-18-01-08
@@ -36,10 +36,10 @@ ausreichte. Sie war also meines Erachtens nur ein Zwischenschritt.
 In den letzten Tagen formt sich nun anscheinend mit einer neuen Spitze bei 
 17400$ und dem anschließenden ersten Absinken diese rechte Schulter. 
 
-##### Elliot waves
+##### Elliott waves
 
 Nun kommt Theorie 2 ins Spiel - die 
-[Elliot-Wellen-Theorie](https://de.wikipedia.org/wiki/Elliott-Wellen). Gegen
+[Elliott-Wellen-Theorie](https://de.wikipedia.org/wiki/Elliott-Wellen). Gegen
 Mitte Dezember hatten wir den Abschluss eines bullischen 5-Wellen-Impuls-Zyklus 
 (12345-Zyklus). Dem sollte nun eine längere 3-Wellen-Korrektur folgen (ABC-Zyklus 
 bzw. Zigzag). Wie in der Zeichnung ersichtlich, sollten wir uns nun in der 
