--- a/_posts/2018-01-13-kraken-offline-180113.md
+++ b/_posts/2018-01-13-kraken-offline-180113.md
@@ -25,7 +25,7 @@ Diese sollte wohl nun am Donnerstag freigeschaltet werden - eingeplant waren daf
 Das hat wohl etwas länger gedauert, so dass sich die Entwickler
 erstmal erholen mussten:
 
-![](/assets/img/DTUMGkvVwAARD05.jpg =400x427)
+![](/assets/img/DTUMGkvVwAARD05.jpg){:height="400px" width="427px"}
 
 Das Anlegen neuer Konten ebenso wie das Abziehen von Beträgen von der Exchange
 sind derzeit noch deaktiviert - ansonsten scheint die Erreichbarkeit wieder gut zu
