--- a/_posts/2018-01-13-kraken-offline-180113.md
+++ b/_posts/2018-01-13-kraken-offline-180113.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Kraken offline"
+title:  "Kraken war offline"
 date:   2018-01-13 15:00:00
 excerpt: "Kryptowährungsbörse Kraken.com war mehr als 2 Tage offline!"
 feature: /assets/img/Kraken-725x322.jpg
