--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Bitcoin-Kurskorrektur zum Jahresbeginn"
 date:   18-01-08 10:20:00
 excerpt: "Prognose für Bitcoin-Kurskorrektur im Januar 2018."
-feature: http://digitalage.com.tr/wp-content/uploads/2017/09/Avrupa-Merkez-Bankasi-Bitcoin.jpg
+feature: /assets/img/Bitcoin.jpg
 tags: [bitcoin, kryptowährungen, fibonacci, elliott, muster]
 comments: true
 lang: de
