switch to single tag pages

--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -5,7 +5,7 @@ date:   18-01-08 10:20:00
 excerpt: "Prognose für Bitcoin-Kurskorrektur im Januar 2018."
 image: /assets/img/wide/Bitcoin.jpg
 thumb: /assets/img/thumbs/Bitcoin.jpg
-tags: [bitcoin, kryptowährungen, fibonacci, elliott, muster]
+tags: [bitcoin, kryptowaehrungen, fibonacci, elliott, muster]
 categories: [posts, cryptocurrencies]
 comments: true
 lang: de
