--- a/tags/de/l10n.md
+++ b/tags/de/l10n.md
@@ -1,6 +1,7 @@
 ---
 layout: post-list
-title: "Getagged als: l10n"  
+title: "Getagged als: l10n"
+excerpt: 'Liste aller Artikel, welche mit der Markierung "l10n" versehen wurden.'  
 tag: l10n
 lang: de
 ref: tag-l10n
