--- a/tags/de/i18n.md
+++ b/tags/de/i18n.md
@@ -1,6 +1,7 @@
 ---
 layout: post-list
-title: "Getagged als: i18n"  
+title: "Getagged als: i18n"
+excerpt: 'Liste aller Artikel, welche mit der Markierung "i18n" versehen wurden.'  
 tag: i18n
 lang: de
 ref: tag-i18n
