--- a/tags/en/i18n.md
+++ b/tags/en/i18n.md
@@ -1,6 +1,7 @@
 ---
 layout: post-list
-title: "Tagged as: i18n"  
+title: "Tagged as: i18n"
+excerpt: 'List of all posts, which were decorated with the tag "i18n".'  
 tag: i18n
 lang: en
 ref: tag-i18n
