--- a/tags/en/l10n.md
+++ b/tags/en/l10n.md
@@ -1,6 +1,7 @@
 ---
 layout: post-list
-title: "Tagged as: l10n"  
+title: "Tagged as: l10n"
+excerpt: 'List of all posts, which were decorated with the tag "l10n".'  
 tag: l10n
 lang: en
 ref: tag-l10n
