--- a/_posts/2018-01-09-btc-prognose-18-01-08.md
+++ b/_posts/2018-01-09-btc-prognose-18-01-08.md
@@ -21,14 +21,13 @@ Das Ergebnis könnt ihr hier sehen:
 
 [![Kursprognose auf tradingview](/assets/img/2018-01-09-btc-prognose-18-01-08.JPG)](https://www.tradingview.com/chart/BTCUSDT/qhMLRZcH-BTC-USD-correction-prognose/)
 
-
 Demzufolge ist meine Prognose für die nächste Woche ein Preisverfall bis auf 
 9100-8500 $. **Das widerspiegelt natürlich nur meine persönliche Meinung - 
 ihr müsst Euch ein eigenes Bild machen**!
 
-#### Wie komme ich zu dem Ergebnis?
+## Wie komme ich zu dem Ergebnis?
 
-##### Head-And-Shoulders
+### Head-And-Shoulders
 
 Nun, das Fibonacci-Retracement zeigt, dass die erste Spitze nach dem tiefen 
 Fall von 20000 $ genau beim wichtigen 0.618-Level endete und somit eher nicht 
@@ -38,7 +37,7 @@ ausreichte. Sie war also meines Erachtens nur ein Zwischenschritt.
 In den letzten Tagen formt sich nun anscheinend mit einer neuen Spitze bei 
 17400$ und dem anschließenden ersten Absinken diese rechte Schulter. 
 
-##### Elliott waves
+### Elliott waves
 
 Nun kommt Theorie 2 ins Spiel - die 
 [Elliott-Wellen-Theorie](https://de.wikipedia.org/wiki/Elliott-Wellen). Gegen
@@ -61,11 +60,8 @@ Wir werden sehen, was die nächsten Tage so bringen! Wie es mit dem Kurs weiterg
 ob sich das eingezeichnete Zigzag eventuell in einen 5-Wellen-Abwärtsimpuls-Zyklus
 erweitert, ist derzeit nicht voraussagbar.
 
-### Hinweis
+## Hinweis
 
 Für die Berechnung
 und Darstellung habe ich die Kurswerte der Kryptobörse Bittrex herangezogen. Auf
-anderen Börsen können die Kurse differieren. 
-
-
-
+anderen Börsen können die Kurse differieren.
